# coinolio-api

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
.github/workflows/: build.yml  test.yml
app/: main.py
app/api/v1/endpoints/: auth.py  coins.py  portfolios.py  subscriptions.py
app/core/: config.py  deps.py  json.py  rate_limit.py  security.py
app/db/: base.py  base_model.py  custom_types.py
app/models/: __init__.py  enums.py  portfolio.py  user.py
app/repositories/: __init__.py  base.py  portfolio.py  user.py
app/schemas/: portfolio.py  portfolio_sync.py
app/services/: __init__.py  auth.py  cache.py  coingecko.py  sync_manager.py
docker/: Dockerfile
docker/local/: docker-compose.yml
docs/: API_REFERENCE.md  TESTING_STRATEGY.md  auth_strategy.md  docker_strategy.md  portfolio_strategy.md  sync_strategy.md
tests/: conftest.py
tests/api/v1/: test_portfolios.py  test_subscriptions.py
tests/factories/: portfolio.py  user.py
tests/unit/api/v1/endpoints/: test_auth.py  test_coins.py  test_portfolios.py
tests/unit/repositories/: test_base.py  test_portfolio.py  test_user.py
tests/unit/services/: test_sync_manager.py
tests/utils/: cache_mock.py  client.py  db.py  models.py  rate_limiter_mock.py  redis.py  stripe_mocks.py
