[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coinolio-api"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Cryptocurrency portfolio tracking and analytics API"
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]
